Fix contrast color for accessibility

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -23,7 +23,7 @@ main {
 }
 
 .title {
-  color: #D1C4E9;
+  color: #FFF;
   background-color: #673AB7;
   padding: 15px; 
 }
